# notes-app

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: lint.yml
backend/: .flake8  Dockerfile  conftest.py  manage.py  pyproject.toml
backend/apps/notes/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/notes/migrations/: 0001_initial.py
backend/apps/users/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  testing.py
backend/helpers/: fields.py  tests.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/__tests__/app/: dashboard.test.tsx  login.test.tsx  new-note.test.tsx  note-detail.test.tsx  protected-layout.test.tsx  register.test.tsx
frontend/src/__tests__/components/: CategoryDialog.test.tsx
frontend/src/__tests__/lib/: api.test.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(protected)/: layout.tsx  page.tsx
frontend/src/app/(protected)/notes/[id]/: page.tsx
frontend/src/app/(protected)/notes/new/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: CategoryDialog.tsx
frontend/src/lib/: api.ts
