[tool.poetry]
name = "notes-app-backend"
version = "0.1.0"
description = "Notes taking app backend"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
django-cors-headers = "^4.3"
django-filter = "^24.0"
drf-yasg = "^1.21"
psycopg2-binary = "^2.9"
gunicorn = "^22.0"
djangorestframework-camel-case = "^1.4.2"
django-extensions = "^4.1"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.8"
pytest-cov = "^5.0"
factory-boy = "^3.3"
black = "^24.0"
flake8 = "^7.0"
isort = "^5.13"
ipython = ">=8.0,<9"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | migrations/
  | venv
  | _build
  | manage.py
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
addopts = "--durations=10 -v --nomigrations --cov=apps --cov=helpers --cov-report=term-missing --cov-report=xml --cov-fail-under=90 -p no:warnings"
python_files = ["tests.py", "test_*.py"]

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests*", "conftest.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
